--- a/ball.html
+++ b/ball.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>个人技能</title>
+  <link rel="shortcut icon" href="images/533236.png">
 	<style>
 		body {
 			margin: 0;
