--- a/my.html
+++ b/my.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>个人作品展示——刘明</title>
+    <title>个人小作品——刘明</title>
+    <link rel="shortcut icon" href="images/1116649.png">
     <link rel="stylesheet" href="css/my.css"/>
     <script type="text/javascript" src="js/animate.js"></script>
     <script type="text/javascript" src="js/my.js"></script>
