--- a/waterfall.html
+++ b/waterfall.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>瀑布流布局</title>
+    <link rel="shortcut icon" href="images/1183240.png">
     <style>
         * {
             margin: 0;
