--- a/my.html
+++ b/my.html
@@ -12,11 +12,11 @@
 <div class="wrap" id="wrap">
    <div class="slide" id="slide">
        <ul>
-           <li><a href="http://liuziming.github.io/sk.html"><img src="images/my05.jpg" alt=""/></a></li>
-           <li><a href="http://liuziming.github.io/xyc.html"><img src="images/my04.jpg" alt=""/></a></li>
-           <li><a href="http://liuziming.github.io/mi.html"><img src="images/my03.jpg" alt=""/></a></li>
-           <li><a href="http://liuziming.github.io/waterfall.html"><img src="images/my02.jpg" alt=""/></a></li>
-           <li><a href="http://liuziming.github.io/ball.html"><img src="images/my01.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/sk.html" target="blank"><img src="images/my05.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/xyc.html" target="blank"><img src="images/my04.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/mi.html" target="blank"><img src="images/my03.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/waterfall.html" target="blank"><img src="images/my02.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/ball.html" target="blank"><img src="images/my01.jpg" alt=""/></a></li>
        </ul>
        <div class="arrow" id="arrow">
            <a href="javascript:;" class="prev"></a>
