--- a/xyc.html
+++ b/xyc.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="author" content="iceStone <ice@wedn.net>">
-  <title>微金所-安全的互联网微金融资产交易平台</title>
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="css/main.css">
+  <title>【小油菜P2P理财】</title>
+  <link rel="shortcut icon" href="images/xycicon.png">
+  <link rel="stylesheet" href="js/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="css/xyc.css">
 </head>
 
 <body>
@@ -19,24 +18,21 @@
     <div class="topbar hidden-sm hidden-xs">
       <div class="container">
         <div class="row">
-          <div class="tb-1 col-md-2">
+          <div class="tb-1 col-md-4">
             <a href="#" class="text-muted">
               <i class="icon-mobilephone"></i>
-              <span>手机微金所</span>
-              <i class="glyphicon glyphicon-chevron-down"></i>
-              <img src="img/c_06.jpg" alt="扫一扫">
+              <span>全国统一服务热线：400-060-8800服务时间：9:00-18:00</span>
             </a>
           </div>
-          <div class="tb-2 col-md-5 text-center text-muted">
-            <i class="icon-telephone"></i><span>4006-89-4006（服务时间：9:00-21:00）</span>
+          <div class="tb-2 col-md-2 text-left text-muted">
+            <span>关注我们：</span><span></span>
           </div>
-          <div class="tb-3 col-md-2 text-center">
-            <a href="#" class="text-muted">常见问题</a>
-            <a href="#" class="text-muted">财富登录</a>
-          </div>
-          <div class="tb-4 col-md-3 text-center">
-            <a href="#" class="btn btn-register btn-sm">免费注册</a>
-            <a href="#" class="text-muted" data-toggle="modal" data-target=".modal">登录</a>
+          <div class="tb-3 col-md-6 text-center">
+            <a href="#" class="text-muted top-bar top-login">免费注册</a>
+            <a href="#" class="text-muted top-bar">登录&nbsp;&nbsp;|</a>
+            <a href="#" class="text-muted top-bar">手机客户端 &nbsp;&nbsp;  |</a>
+            <a href="#" class="text-muted top-bar">攻略 公益 &nbsp;|</a>
+            <a href="#" class="text-muted top-bar">新手引导</a>
           </div>
         </div>
       </div>
@@ -58,16 +54,16 @@
         </div>
         <div class="collapse navbar-collapse" id="nav_menu">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">我要投资 <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">我要借款</a></li>
-            <li><a href="#">平台介绍</a></li>
-            <li><a href="#">新手专区</a></li>
-            <li><a href="#">最新动态</a></li>
-            <li><a href="#">微论坛</a></li>
+            <li><a href="#"><span class="nav-demo">首页</span><span class="sr-only">(current)</span></a></li>
+            <li><a href="#">我要投资</a><i></i></li>
+            <li><a href="#">我要借款</a><i></i></li>
+            <li><a href="#">资金托管</a><i></i></li>
+            <li><a href="#">投资保障</a><i></i></li>
+            <li><a href="#">活动专区</a><i></i></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right hidden-sm ">
+          <!-- <ul class="nav navbar-nav navbar-right hidden-sm ">
             <li><a href="#">个人中心</a></li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </nav>
@@ -82,20 +78,32 @@
       <li data-target="#home_slide" data-slide-to="1"></li>
       <li data-target="#home_slide" data-slide-to="2"></li>
       <li data-target="#home_slide" data-slide-to="3"></li>
+      <li data-target="#home_slide" data-slide-to="4"></li>
+      <li data-target="#home_slide" data-slide-to="5"></li>
+      <li data-target="#home_slide" data-slide-to="6"></li>
     </ol>
     <!-- 轮播页 -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <div class="item-image" data-image-large="img/slide_01_2000x410.jpg" data-image-small="img/slide_01_640x340.jpg" data-image-alt="哈哈"></div>
+        <div class="item-image" data-image-large="images/slide_01_2000x410.jpg" data-image-small="images/slide_01.jpg" data-image-alt="哈哈"></div>
       </div>
       <div class="item">
-        <div class="item-image" data-image-large="img/slide_02_2000x410.jpg" data-image-small="img/slide_02_640x340.jpg" data-image-alt="哈哈"></div>
+        <div class="item-image" data-image-large="images/slide_02_2000x410.jpg" data-image-small="images/slide_02.jpg" data-image-alt="哈哈"></div>
       </div>
       <div class="item">
-        <div class="item-image" data-image-large="img/slide_03_2000x410.jpg" data-image-small="img/slide_03_640x340.jpg" data-image-alt="哈哈"></div>
+        <div class="item-image" data-image-large="images/slide_03_2000x410.jpg" data-image-small="images/slide_03.jpg" data-image-alt="哈哈"></div>
       </div>
       <div class="item">
-        <div class="item-image" data-image-large="img/slide_04_2000x410.jpg" data-image-small="img/slide_04_640x340.jpg" data-image-alt="哈哈"></div>
+        <div class="item-image" data-image-large="images/slide_04_2000x410.jpg" data-image-small="images/slide_04.jpg" data-image-alt="哈哈"></div>
+      </div>
+      <div class="item">
+        <div class="item-image" data-image-large="images/slide_05_2000x410.jpg" data-image-small="images/slide_05.jpg" data-image-alt="哈哈"></div>
+      </div>
+      <div class="item">
+        <div class="item-image" data-image-large="images/slide_06_2000x410.jpg" data-image-small="images/slide_06.jpg" data-image-alt="哈哈"></div>
+      </div>
+      <div class="item">
+        <div class="item-image" data-image-large="images/slide_07_2000x410.jpg" data-image-small="images/slide_07.jpg" data-image-alt="哈哈"></div>
       </div>
     </div>
     <!-- 控制按钮 -->
@@ -1215,8 +1223,8 @@
   <!-- /合作伙伴 -->
   <footer>
   </footer>
-  <!-- 登录对话框 -->
-  <div class="modal fade">
+  <!-- <!-- 登录对话框 -->
+  <!-- <div class="modal fade">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
@@ -1259,11 +1267,11 @@
         </div> -->
       </div>
     </div>
-  </div>
-  <!-- /登录对话框 -->
-  <script src="lib/jquery/jquery.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.js"></script>
-  <script src="js/main.js"></script>
+  <!-- </div>  -->-->
+  <!-- /登录对话框 --> -->
+  <script src="js/jquery/jquery.js"></script>
+  <script src="js/bootstrap/js/bootstrap.js"></script>
+  <script src="js/xyc.js"></script>
 </body>
 
 </html>
