--- a/xyc.html
+++ b/xyc.html
@@ -25,21 +25,21 @@
             </a>
           </div>
           <div class="tb-2 col-md-2 text-left text-muted">
-            <span>关注我们：</span><span></span>
+            <span>关注我们：</span><span class="top-wx"><img src="images/564e9e81915ef_1024.jpg" alt=""><div class="top-wximg"><img src="images/fwhewm.jpg" alt=""></div> <img src="images/564e9e81915ef_102.jpg" height="19" width="23" alt=""></span>
           </div>
           <div class="tb-3 col-md-6 text-center">
             <a href="#" class="text-muted top-bar top-login">免费注册</a>
             <a href="#" class="text-muted top-bar">登录&nbsp;&nbsp;|</a>
             <a href="#" class="text-muted top-bar">手机客户端 &nbsp;&nbsp;  |</a>
             <a href="#" class="text-muted top-bar">攻略 公益 &nbsp;|</a>
-            <a href="#" class="text-muted top-bar">新手引导</a>
+            <a href="#" class="text-muted top-bar">新手引导<span class="top-newh"></span></a>
           </div>
         </div>
       </div>
     </div>
     <!-- /通栏菜单 -->
     <!-- 导航菜单 -->
-    <nav class="navbar navbar-itcast" data-spy="affix" data-offset-top="200" data-offset-bottom="1000">
+    <nav class="navbar navbar-lm" data-spy="affix" data-offset-top="200" data-offset-bottom="1000">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav_menu" aria-expanded="false">
@@ -49,7 +49,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">
-            <i class="icon-icon"></i><i class="icon-logo"></i>
+            <img src="images/xlogo_new.jpg" height="82" width="358" alt="">
           </a>
         </div>
         <div class="collapse navbar-collapse" id="nav_menu">
@@ -61,9 +61,9 @@
             <li><a href="#">投资保障</a><i></i></li>
             <li><a href="#">活动专区</a><i></i></li>
           </ul>
-          <!-- <ul class="nav navbar-nav navbar-right hidden-sm ">
+          <ul class="nav navbar-nav navbar-right hidden-sm ">
             <li><a href="#">个人中心</a></li>
-          </ul> -->
+          </ul>
         </div>
       </div>
     </nav>
@@ -117,97 +117,47 @@
     </a>
   </section>
   <!-- /通栏轮播 -->
+
   <!-- 网站特色 -->
-  <section id="features" class="hidden-xs">
+  <section id= "features" class=" hidden-sm hidden-xs">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-md-4">
-          <a href="#">
-            <div class="media">
-              <div class="media-left">
-                <i class="icon-uniE907"></i>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">支付交易保证</h4>
-                <p>银联支付全程保障资金安全</p>
-              </div>
+      <div class="col-md-7">
+        <ul class="inleft">
+          <li>
+            <div class="bgi bgi1">
+              <span></span>
             </div>
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a href="#">
-            <div class="media">
-              <div class="media-left">
-                <i class="icon-uniE903"></i>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">平台财产安全</h4>
-                <p>由PICC保驾护航</p>
-              </div>
+              <i class="bgsp1">100元起投，6.5%-15%</i>
+          </li>
+          <li>
+            <div class="bgi bgi2">
+              <span></span>
             </div>
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a href="#">
-            <div class="media">
-              <div class="media-left">
-                <i class="icon-uniE901"></i>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">交易安全</h4>
-                <p>由中国人寿财险对借款人承保</p>
-              </div>
+              <i class="bgsp2">本息无忧计划</i>
+          </li>
+          <li>
+            <div class="bgi bgi3">
+              <span></span>
             </div>
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a href="#">
-            <div class="media">
-              <div class="media-left">
-                <i class="icon-uniE900"></i>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">安全保障</h4>
-                <p>独创八层安全保障机制</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a href="#">
-            <div class="media">
-              <div class="media-left">
-                <i class="icon-uniE904"></i>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">筛选优质资产</h4>
-                <p>对接上海资信征信系统</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a href="#">
-            <div class="media">
-              <div class="media-left">
-                <i class="icon-uniE902"></i>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">联合信息发布</h4>
-                <p>通过路透社共同发布利率指数报告</p>
-              </div>
-            </div>
-          </a>
-        </div>
+              <i class="bgsp3">联动优势资金托管</i>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-5">
+        <ul class="inright">
+          <li></li>
+        </ul>
       </div>
     </div>
   </section>
+
   <!-- /网站特色 -->
+
   <!-- 预约投标 -->
   <section id="booking">
     <div class="container">
       <p class="pull-left"><i class="icon-uniE906"></i> 现在有<span>458</span>人在排队，累计预约交易成功<span>7409</span>次。 什么是预约投标？ <a class="just-now" href="#">立即预约</a></p>
-      <p class="hidden-sm hidden-xs pull-right"><a class="quick-learn" href="#"><i class="icon-uniE905"></i> 微金所企业宣传片</a></p>
+      <p class="hidden-sm hidden-xs pull-right"><a class="quick-learn" href="#"><i class="icon-uniE905"></i> 小油菜投资理财</a></p>
     </div>
   </section>
   <!-- /预约投标 -->
