--- a/xyc.html
+++ b/xyc.html
@@ -119,7 +119,7 @@
   <!-- /通栏轮播 -->
 
   <!-- 网站特色 -->
-  <section id= "features" class=" hidden-sm hidden-xs">
+  <section id= "features" class=" hidden-sm hidden-xs hidden-md">
     <div class="container">
       <div class="col-md-7">
         <ul class="inleft">
@@ -145,7 +145,14 @@
       </div>
       <div class="col-md-5">
         <ul class="inright">
-          <li></li>
+          <li>
+          <strong>14</strong>亿<strong>7985</strong>万元
+          <p>累计投资额</p>
+          </li>
+          <li>
+          <strong>9</strong>万<strong>5847</strong>万元
+          <p>精明的财主加入</p>
+          </li>
         </ul>
       </div>
     </div>
@@ -168,12 +175,9 @@
       <div class="touch-scroll">
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#category_01" aria-controls="category_01" role="tab" data-toggle="tab">特别推荐</a></li>
-          <li role="presentation"><a href="#category_02" aria-controls="category_02" role="tab" data-toggle="tab">微投资</a></li>
-          <li role="presentation"><a href="#category_03" aria-controls="category_03" role="tab" data-toggle="tab">微小宝</a></li>
-          <li role="presentation"><a href="#category_04" aria-controls="category_04" role="tab" data-toggle="tab">微消费</a></li>
-          <li role="presentation"><a href="#category_05" aria-controls="category_05" role="tab" data-toggle="tab">微增利</a></li>
-          <li role="presentation"><a href="#category_06" aria-controls="category_06" role="tab" data-toggle="tab">微金宝</a></li>
-          <li role="presentation"><a href="#category_06" aria-controls="category_06" role="tab" data-toggle="tab">微转让</a></li>
+          <li role="presentation"><a href="#category_02" aria-controls="category_02" role="tab" data-toggle="tab">阳光房有财</a></li>
+          <li role="presentation"><a href="#category_03" aria-controls="category_03" role="tab" data-toggle="tab">保有财</a></li>
+          <li role="presentation"><a href="#category_04" aria-controls="category_04" role="tab" data-toggle="tab">1元新手</a></li>
           <li class="hidden-sm hidden-xs pull-right"><a href="#" class="btn btn-link">更多</a></li>
         </ul>
       </div>
@@ -785,279 +789,27 @@
             </div>
           </div>
         </div>
-        <div role="tabpanel" class="tab-pane fade" id="category_05">
-          <div class="row">
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div role="tabpanel" class="tab-pane fade" id="category_06">
-          <div class="row">
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="panel-product">
-                <div class="panel-heading">
-                  <p class="tooltips">
-                    <span class="primary" data-toggle="tooltip" data-placement="top" title="" data-original-title="北京市">京</span>
-                    <span class="secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="实地认证">实</span>
-                  </p>
-                  <p><strong>8</strong><sub>%</sub>
-                    <br><span>年利率</span></p>
-                </div>
-                <div class="panel-body">
-                  <h5>新手体验标0650期</h5>
-                  <div class="row">
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-left">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                    <div class="col-xs-6 text-right">
-                      <dt>起投金额(元)</dt>
-                      <dd>0.01<sub>万</sub></dd>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
+    </div>
+  </section>
+  <section id="huikuan" class=" hidden-sm hidden-xs">
+    <div class="container">
+      <div class="tit">回款完成</div>
+      <ul class="col-md-4">
+        <li><i>房有财</i>XF-SEP252期-6188</li>
+        <li>2016-03-29回款完成</li>
+        <li><strong>63位</strong>投资者，共收益<strong>77,000.16元</strong></li>
+      </ul>
+      <ul class="col-md-4">
+        <li><i>房有财</i>XF-SEP252期-6188</li>
+        <li>2016-03-29回款完成</li>
+        <li><strong>63位</strong>投资者，共收益<strong>77,000.16元</strong></li>
+      </ul>
+      <ul class="col-md-4">
+        <li><i>房有财</i>XF-SEP252期-6188</li>
+        <li>2016-03-29回款完成</li>
+        <li><strong>63位</strong>投资者，共收益<strong>77,000.16元</strong></li>
+      </ul>
     </div>
   </section>
   <!-- /投资产品 -->
